# crossdeployqt

./: .gitignore  CMakeLists.txt  README.md  flake.nix
nix/: appimagetool.nix  velopack.nix
nix/nuget-deps/: vpk-deps.json
src/: main.cpp
src/cdqt/: args.cpp  args.h  binary_detect.cpp  binary_detect.h  common.cpp  common.h  deploy.cpp  deploy.h  deps_parse.cpp  deps_parse.h  fs_ops.cpp  fs_ops.h  macho_fixups.cpp  macho_fixups.h  pe_patch.cpp  pe_patch.h  qml.cpp  qml.h  qt_paths.cpp  qt_paths.h  resolve.cpp  resolve.h  stage.cpp  stage.h  tools.cpp  tools.h  translations.cpp  translations.h  util.cpp  util.h
